sas-core/main/default/objects/VoiceCall/fields/Ancillary_Menu_Selection__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Menu_Selection__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ancillary Menu Selection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>