sas-core/main/default/objects/VoiceCall/fields/Call_Accepted_Hour__c.field-meta.xml
<CustomField>
    <fullName>Call_Accepted_Hour__c</fullName>
    <description>used for reporting</description>
    <formula>HOUR( TIMEVALUE( CallAcceptDateTime )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Accepted Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>