sas-core/main/default/objects/VoiceCall/fields/Call_Dropped__c.field-meta.xml
<CustomField>
    <fullName>Call_Dropped__c</fullName>
    <description>used for reporting</description>
    <formula>ISBLANK( CallAcceptDateTime ) &amp;&amp; NOT(ISBLANK( CallEndDateTime ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Dropped</label>
    <type>Checkbox</type>
</CustomField>