sas-core/main/default/objects/VoiceCall/fields/Call_Handled__c.field-meta.xml
<CustomField>
    <fullName>Call_Handled__c</fullName>
    <description>used for reporting</description>
    <formula>NOT(ISBLANK( CallAcceptDateTime ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Handled</label>
    <type>Checkbox</type>
</CustomField>