sas-core/main/default/objects/VoiceCall/fields/Call_Outside_Operating_Hours__c.field-meta.xml
<CustomField>
    <fullName>Call_Outside_Operating_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Outside Operating Hours</label>
    <type>Checkbox</type>
</CustomField>