sas-core/main/default/objects/VoiceCall/fields/Call_Speak_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Speak_Time__c</fullName>
    <formula>((CallEndDateTime - CallAcceptDateTime)* 24 * 60 * 60)- CustomerHoldDuration</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Speak Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>