sas-core/main/default/objects/VoiceCall/fields/Call_Waiting_In_Queue_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Call_Waiting_In_Queue_Seconds__c</fullName>
    <description>used for reporting</description>
    <formula>IF( ISBLANK( CallAcceptDateTime ) , ( CallEndDateTime -  CallQueuedDateTime ), ( CallAcceptDateTime -  CallQueuedDateTime )) * 24 * 60 * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call Waiting In Queue Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>