sas-core/main/default/objects/VoiceCall/fields/Caller_IVR_Language__c.field-meta.xml
<CustomField>
    <fullName>Caller_IVR_Language__c</fullName>
    <label>Caller IVR Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>DA</fullName>
                <label>Danish</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Finnish</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>EL</fullName>
                <label>Greek</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Norwegian</label>
            </value>
            <value>
                <fullName>RU</fullName>
                <label>Russian</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>SV</fullName>
                <label>Swedish</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>