sas-core/main/default/objects/VoiceCall/fields/Caller_IVR_Selection__c.field-meta.xml
<CustomField>
    <fullName>Caller_IVR_Selection__c</fullName>
    <label>Caller IVR Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AGT</fullName>
                <label>Agent Helpdesk</label>
            </value>
            <value>
                <fullName>AGTAH</fullName>
                <label>Agent Helpdesk After Hours</label>
            </value>
            <value>
                <fullName>AMEX</fullName>
                <label>American Express</label>
            </value>
            <value>
                <fullName>BAG</fullName>
                <label>Baggage Service</label>
            </value>
            <value>
                <fullName>DS-CB</fullName>
                <label>Change Booking</label>
            </value>
            <value>
                <fullName>CORPB2C</fullName>
                <label>Corporate Support B2C</label>
            </value>
            <value>
                <fullName>DIAMOND</fullName>
                <label>Diamond</label>
            </value>
            <value>
                <fullName>DIRECTGRP</fullName>
                <label>Direct Group Sales</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Direct Sales</label>
            </value>
            <value>
                <fullName>ERO</fullName>
                <label>Emergency Response</label>
            </value>
            <value>
                <fullName>EB</fullName>
                <label>Eurobonus</label>
            </value>
            <value>
                <fullName>INFO</fullName>
                <label>General Info</label>
            </value>
            <value>
                <fullName>GOLD</fullName>
                <label>Gold</label>
            </value>
            <value>
                <fullName>GRP</fullName>
                <label>Group Sales</label>
            </value>
            <value>
                <fullName>GRPBULK</fullName>
                <label>Group Sales Bulk</label>
            </value>
            <value>
                <fullName>DS-NB</fullName>
                <label>New Booking</label>
            </value>
            <value>
                <fullName>NDCORP</fullName>
                <label>Norwegian Defense Corporate</label>
            </value>
            <value>
                <fullName>NDFLO</fullName>
                <label>Norwegian Defense Flo Trans</label>
            </value>
            <value>
                <fullName>NDFLOAH</fullName>
                <label>Norwegian Defense Flo Trans After Hours</label>
            </value>
            <value>
                <fullName>NDGRP</fullName>
                <label>Norwegian Defense Group Sales</label>
            </value>
            <value>
                <fullName>NDIND</fullName>
                <label>Norwegian Defense Individual</label>
            </value>
            <value>
                <fullName>PANDION</fullName>
                <label>Pandion</label>
            </value>
            <value>
                <fullName>POSTERO</fullName>
                <label>Post Emergency Response</label>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
                <label>Premium</label>
            </value>
            <value>
                <fullName>PREMIUMAH</fullName>
                <label>Premium After Hours</label>
            </value>
            <value>
                <fullName>PMCORPSUP</fullName>
                <label>Premium Corporate Support</label>
            </value>
            <value>
                <fullName>REFSUP</fullName>
                <label>Refund Support</label>
            </value>
            <value>
                <fullName>HQSUP-SALES</fullName>
                <label>Sales Support</label>
            </value>
            <value>
                <fullName>SSALES</fullName>
                <label>Special Sales</label>
            </value>
            <value>
                <fullName>HQSUP-STAR</fullName>
                <label>STAR Alliance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>