sas-core/main/default/objects/VoiceCall/fields/Caller_Market__c.field-meta.xml
<CustomField>
    <fullName>Caller_Market__c</fullName>
    <formula>IF(ISBLANK(FromPhoneNumber), &apos;n/a&apos;,
CASE(LEFT(FromPhoneNumber,3),
&apos;+45&apos;, &apos;Denmark&apos;,
&apos;+46&apos;, &apos;Sweden&apos;,
&apos;+47&apos;, &apos;Norway&apos;,
&apos;+44&apos;, &apos;England&apos;,
&apos;Other&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caller Market</label>
    <type>Text</type>
</CustomField>