sas-core/main/default/objects/VoiceCall/fields/is_Survey_Available__c.field-meta.xml
<CustomField>
    <fullName>is_Survey_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Survey Available</label>
    <type>Checkbox</type>
</CustomField>