sas-core/main/default/objects/VoiceCall/fields/Recipient_Country__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Country__c</fullName>
    <label>Recipient Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACE</fullName>
                <label>Area Central Europe</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>EE</fullName>
                <label>Estonia</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Finland</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>Greece</label>
            </value>
            <value>
                <fullName>IS</fullName>
                <label>Iceland</label>
            </value>
            <value>
                <fullName>IE</fullName>
                <label>Ireland</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Italy</label>
            </value>
            <value>
                <fullName>LV</fullName>
                <label>Latvia</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Lithuania</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>Netherlands</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Norway</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Poland</label>
            </value>
            <value>
                <fullName>ROTW</fullName>
                <label>Rest of the World</label>
            </value>
            <value>
                <fullName>RU</fullName>
                <label>Russia</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spain</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Sweden</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Switzerland</label>
            </value>
            <value>
                <fullName>TH</fullName>
                <label>Thailand</label>
            </value>
            <value>
                <fullName>UK</fullName>
                <label>United Kingdom</label>
            </value>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>