sas-core/main/default/objects/VoiceCall/fields/SMS_Case_Deflect__c.field-meta.xml
<CustomField>
    <fullName>SMS_Case_Deflect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Case Deflect</label>
    <type>Checkbox</type>
</CustomField>