sas-core/main/default/objects/VoiceCall/listViews/Missed_Phone_Calls.listView-meta.xml
<ListView>
    <fullName>Missed_Phone_Calls</fullName>
    <columns>CallStartDateTime</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallType</columns>
    <columns>CallResolution</columns>
    <columns>Owner</columns>
    <columns>Name</columns>
    <columns>EndUser</columns>
    <columns>QualityScore</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallDisposition</field>
        <operation>notEqual</operation>
        <value>completed</value>
    </filters>
    <label>Missed Phone Calls</label>
</ListView>